# fedsam

./: .flake8  .gitignore  Makefile  pyproject.toml
data/: setup_datasets.sh
models/: Untitled.ipynb  baseline_constants.py  main.py
models/cifar10/: dataloader.py  destillation.py  resnet20.py
models/cifar100/: destillation.py
models/clients/: client.py
models/fedmd/: helper.py  model_build.py  option.py  pretrained_public.py  resnet20.py
models/servers/: fedmd_server.py  fedopt_server.py
models/utils/: args.py  main_utils.py  model_utils.py
paper_experiments/: cifar10.sh
