[tool.poetry]
name = "fedsam"
version = "0.1.0"
description = ""
authors = ["Juan Vanegas <jandvanegas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.10"
# TODO fix torch installation when poetry stops downloading wheels everytime.
# torch = { version = "1.13.1+cu116", source="torch"}
# torch = { url="https://download.pytorch.org/whl/cu116/torch-1.13.1%2Bcu116-cp38-cp38-linux_x86_64.whl", markers="sys_platform == 'linux' and platform_machine == 'x86_64'"}
# torchvision = { url="https://download.pytorch.org/whl/cu116/torchvision-0.14.1%2Bcu116-cp38-cp38-linux_x86_64.whl", markers="sys_platform == 'linux' and platform_machine == 'x86_64'"}
torch = { path = "./local_torch/torch-1.13.1+cu116-cp38-cp38-linux_x86_64.whl"}
torchvision = { path = "./local_torch/torchvision-0.14.1+cu116-cp38-cp38-linux_x86_64.whl"}
pandas = "^1.5.3"
wandb = "^0.13.9"
matplotlib = "^3.6.3"
tqdm = "^4.64.1"
imageio = "^2.25.0"
scipy = "^1.10.0"
numpy = "^1.24.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"
pre-commit = "^3.0.1"
mypy = "^0.991"
autoflake = "^2.0.0"
isort = "^5.11.4"
flake8-bugbear = "^23.1.20"
flake8-docstrings = "^1.7.0"


[tool.poetry.group.nvim.dependencies]
pynvim = "^0.4.3"
debugpy = "^1.6.6"
ropevim = "^0.8.1"

# [[tool.poetry.source]]
# name = "torch"
# url = "https://download.pytorch.org/whl/cu116"
# default = false
# secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
